--- a/src/main/resources/static/css/collection/save.css
+++ b/src/main/resources/static/css/collection/save.css
@@ -15,11 +15,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
     padding-bottom: 30px;
+    text-align: center;
 }
 
 .collection-count-title {
     margin: 0;
+    width: 100%;
+    text-align: center;
 }
 
 .save-img {
